examples/neg/parsing/interface-missing-brace.effekt
interface Greet { def hello(): Unit